-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0
-
None
-
0f1ac3fdc730341418470e6feb18a7c8e78e84ed
When creating multiple windows with the QtQuick Window API, transient children are created before the parents and thus the windows have a wrong focus and z-order.
In following example "win1" will have a higher z-order than "win2" and the keyboard focus. The expected behaviour would be that "win2" would be on top and has the focus.
Window { id: win1 visible: true Window { id: win2 visible: true } }
- relates to
-
QTBUG-52944 Transient parent of Window is not clear when Loader is involved
-
- Closed
-